# max_entropy_music

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
core/: max_entropy4.py  max_entropy_slow.py
data/midi/: Just_Friends-_Pat_Martino_Solo.mid  bach_jesus_joy.mid
examples/: bach-jesus.py  bach.py  chord-seq.py  proust.py  save_load_model.py
examples/data/literature/: combray-extract.txt
examples/data/midi/: Sunny_Pat_Martino_solo.mid  bach_prelude2_top.mid  bach_prelude_c.mid
src/algo/: max_ent_np.py
src/mem/algo/: __init__.py  max_entropy_fast.py  max_entropy_slow.py
src/mem/midi/: midi.py  midi_io.py
src/mem/training/: generator.py  training.py
src/midi/: midi_max_ent.py
