[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "max_entropy_project"
version = "0.1.0"
description = "A project implementing the Max Entropy algorithm."
authors = [
    { name = "François Pachet", email = "pachet@ynosound.com" },
    { name = "Pierre Roy", email = "pierre@ynosound.com" }
]
requires-python=">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy >= 1.21.0",
    "scipy ~= 1.7.0",
    "tqdm ~= 4.61.0"
]
[tool.hatch.build.targets.sdist]
include = [
    "/src/mem",
    "/examples/data",
    "/examples/*.py",
]
[tool.hatch.build.targets.wheel]
packages = ["src/mem"]
